--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -221,28 +221,44 @@
             <h2 class="section-title">Contact</h2>
             <div class="contact-grid">
                 <div class="contact-item">
-                    <div class="contact-icon"><i class="fab fa-linkedin"></i></div>
+                    <div class="contact-icon">
+                        <a href="https://www.linkedin.com/in/daffirds" target="_blank">
+                            <i class="fab fa-linkedin"></i>
+                        </a>
+                    </div>
                     <div class="contact-details">
                         <h4>Linkedin:</h4>
                         <p><a href="https://www.linkedin.com/in/daffirds" target="_blank">www.linkedin.com/in/daffirds</a></p>
                     </div>
                 </div>
                 <div class="contact-item">
-                    <div class="contact-icon"><i class="fab fa-github"></i></div>
+                    <div class="contact-icon">
+                        <a href="https://github.com/daffirds" target="_blank">
+                            <i class="fab fa-github"></i>
+                        </a>
+                    </div>
                     <div class="contact-details">
                         <h4>Github:</h4>
                         <p><a href="https://github.com/daffirds" target="_blank">github.com/daffirds</a></p>
                     </div>
                 </div>
                 <div class="contact-item">
-                    <div class="contact-icon"><i class="fas fa-envelope"></i></div>
+                    <div class="contact-icon">
+                        <a href="mailto:daffirds@gmail.com">
+                            <i class="fas fa-envelope"></i>
+                        </a>
+                    </div>
                     <div class="contact-details">
                         <h4>Email:</h4>
                         <p><a href="mailto:daffirds@gmail.com">daffirds@gmail.com</a></p>
                     </div>
                 </div>
                 <div class="contact-item">
-                    <div class="contact-icon"><i class="fab fa-whatsapp"></i></div>
+                    <div class="contact-icon">
+                        <a href="https://wa.me/628888036903">
+                            <i class="fab fa-whatsapp"></i>
+                        </a>
+                    </div>
                     <div class="contact-details">
                         <h4>WhatsApp:</h4>
                         <p><a href="https://wa.me/628888036903">+62 888 8036 903</a></p>
