--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -80,7 +80,7 @@
         <!-- ABOUT SECTION -->
         <!-- ============================================= -->
         <section id="about" class="section">
-            <h2 class="section-title">About Me (Summary)</h2>
+            <h2 class="section-title">About Me</h2>
             <div class="about-bio">
                 <ul class="about-points">
                     <li>Experienced in designing <strong>machine learning</strong> systems, including <strong>recommendation systems, value predictors (regression/clustering),</strong> and <strong>text classifications.</strong></li>
